force-app/main/default/objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Average_Feedback_Rating__c</fullName>
        <formula>Feedbacks_rating_Sum__c  /  Count_Feedbacks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Feedback Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Attendee__c</fullName>
        <description>here we are countng related attendee records with sessions</description>
        <label>Count Attendee</label>
        <summaryForeignKey>Attendee__c.Attendee_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Feedbacks__c</fullName>
        <label>Count Feedbacks</label>
        <summaryForeignKey>Feedback__c.Training_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Feedbacks_rating_Sum__c</fullName>
        <label>Feedbacks rating Sum</label>
        <summarizedField>Feedback__c.Rating__c</summarizedField>
        <summaryForeignKey>Feedback__c.Training_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date_c__c</fullName>
        <label>Session_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_type__c</fullName>
        <label>Session type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webinar_link__c</fullName>
        <label>Webinar link</label>
        <type>Url</type>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <description>Records for webinar</description>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <description>Records for Seminar</description>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Session_date_Validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>Session_Date_c__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Session_Date_c__c</errorDisplayField>
        <errorMessage>Enter Session date in future</errorMessage>
    </validationRules>
</CustomObject>